# fast-bet

./: .editorconfig  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  mise.toml  pom.xml  skills-lock.json
docs/: architecture.md  conventions.md  local-development.md  roadmap.md
gateway/: .env.example  .gitignore  Cargo.toml  README.md
gateway/src/: config.rs  lib.rs  main.rs  rate_limit.rs  request_id.rs
gateway/src/routes/: signup.rs
gateway/tests/: signup_integration.rs
infra/: .env.example  README.md  docker-compose.yaml
infra/postgres/init/: 01-databases.sh
infra/scripts/: signup-smoke.sh  smoke.sh
openspec/changes/archive/2026-04-28-init-fastbet-phase1/: tasks.md
openspec/changes/archive/2026-04-28-init-fastbet-phase1/specs/betting/: spec.md
openspec/changes/archive/2026-05-01-add-user-signup/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-01-harden-signup-bypass/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-01-harden-signup-edge-bypass/: design.md  proposal.md  tasks.md
openspec/changes/init-fastbet-phase1/: design.md  proposal.md  tasks.md
openspec/changes/init-fastbet-phase1/specs/identity/: spec.md
openspec/changes/init-fastbet-phase1/specs/wallet/: spec.md
openspec/specs/betting/: spec.md
openspec/specs/catalog/: spec.md
openspec/specs/gateway/: spec.md
openspec/specs/identity/: spec.md
openspec/specs/wallet/: spec.md
services/identity/: README.md  pom.xml
services/identity/src/main/resources/: application.properties
(+45 files in other folders)
