[package]
name = "fastbet-gateway"
version = "0.1.0"
edition = "2021"
publish = false
description = "Fast-Bet API gateway: JWT termination, rate limiting, route-based authorization."

[dependencies]
axum = "0.7"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal", "net"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
hyper = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
redis = { version = "0.27", features = ["tokio-comp", "aio", "connection-manager"] }
http = "1"
http-body-util = "0.1"
bytes = "1"
dotenvy = "0.15"

[dev-dependencies]
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "test-util"] }
tower = { version = "0.5", features = ["util"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "tokio", "http1"] }
